# jax-learning

./: .gitignore  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml
.devcontainer/: devcontainer.json  postCreateCommand.sh
src/jax_learning/: main.py  mnist.py  simple_nn.py
